🚀 Hackathon Release: Fix deployment, update README, add assets
- Fix: Replace 3 hardcoded absolute paths with portable os.path.join
- Fix: Add missing python-dateutil dependency
- Fix: Remove duplicate get_image_base64 definitions and import base64
- Fix: Recycle Bin RESTORE button CSS specificity issue
- Fix: MISSION ACCOMPLISHED dialog close button behavior
- Add: assets/ directory with pixel art icons
- Add: .streamlit/config.toml theme configuration
- Update: README with screenshots, correct URLs, tech stack details
- Update: .gitignore to exclude debug/temp files

--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,15 @@ Thumbs.db
 
 # Debug files
 debug_*.py
+agent_test.txt
+app_history.txt
+repair_app.py
+review_dashboard_snippet.py
+ai_suggestions.py
+start_app.command
+启动应用.command
+
+# Local data files
+pacer_focus.json
+pacer_journal.json
+pacer_tags.json
